# Mini_Project

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  generate_sample_resumes.py  pyproject.toml  ruff.toml  test_api.py
frontend/: index.html
frontend-next/: package-lock.json  package.json
frontend-next/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend-next/app/login/: page.tsx
frontend-next/app/rank/: page.tsx
frontend-next/app/register/: page.tsx
frontend-next/components/: AuthGuard.tsx  FileUpload.tsx  MultiFileUpload.tsx  Navigation.tsx  ResultsCard.tsx
frontend-next/hooks/: useScreenResume.ts
frontend-next/lib/: api.ts  auth.ts
src/: __init__.py  database.py  main.py
src/api/: __init__.py  deps.py
src/api/routes/: __init__.py  rank.py  screen.py
src/auth/: __init__.py  dependencies.py  jwt.py  models.py  routes.py  schemas.py
src/core/: __init__.py  config.py  exceptions.py  logging.py  screener_engine.py
src/schemas/: __init__.py  response.py  resume.py
src/services/: embedding_service.py  fairness_service.py  gemini_service.py  pdf_parser.py  ranking_service.py
